2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSSliderCell view.
	* Source/NSSliderCell.m: Added call in drawKnobInCell:... and 
	drawBarInside:.. to drawing methods in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.

2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSScrollView view.
	* Source/NSScrollView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSBrowser view.
	* Source/NSMenuView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSBrowser view.
	* Source/NSBrowser.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSScroller view.
	* Source/NSScroller.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw tab view.
	* Source/NSTabView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>>

	* Source/NSWindow.m (-performClose:): Do not discard close
	requests for a window in a modal session when the window has
	-worksWhenModal==YES.
